# notebooks

./: .gitignore  02_classification.ipynb  04_multilingual-ner.ipynb  environment.yml  pyproject.toml  requirements.txt
chapter02/: tokenization.py
src/transformer_book/: device.py
src/transformer_book/chapter02/: __init__.py  classifier_fine_tuning.py  config.yml  constants.py  entrypoint.py  scratchpad.py  tokenize.py
